--- a/ui/scss/component/_status-bar.scss
+++ b/ui/scss/component/_status-bar.scss
@@ -9,9 +9,9 @@
   bottom: 0;
   font-size: var(--font-small);
   padding-top: 2px;
-  padding-left: var(--spacing-xsmall);
-  padding-right: var(--spacing-xsmall);
-  border-top-right-radius: var(--spacing-xsmall);
+  padding-left: var(--spacing-xs);
+  padding-right: var(--spacing-xs);
+  border-top-right-radius: var(--spacing-xs);
   opacity: 0;
   transition: opacity 0.3s ease;
   transition-delay: 400ms;
